[package]
name = "cuda-trust"
version = "0.1.0"
edition = "2021"
description = "Multi-context trust with Bayesian fusion, decay, and gossip propagation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-trust"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
